# docs/swagger.yaml
@@ -108,6 +108,24 @@ definitions:
     - email
     - name
     type: object
+  domain.OrganizationMemberDetail:
+    properties:
+      created_at:
+        type: string
+      group_id:
+        type: string
+      id:
+        type: string
+      org_id:
+        type: string
+      role:
+        description: OWNER, MANAGER, EMPLOYEE
+        type: string
+      user:
+        $ref: '#/definitions/domain.User'
+      user_id:
+        type: string
+    type: object
   domain.RegisterRequest:
     properties:
       email:
@@ -182,6 +200,18 @@ definitions:
         type: string
     required:
     - title
+    type: object
+  domain.UpdateEmployeeRequest:
+    properties:
+      group_id:
+        type: string
+      role:
+        enum:
+        - MANAGER
+        - EMPLOYEE
+        type: string
+    required:
+    - role
     type: object
   domain.User:
     properties:
@@ -318,6 +348,28 @@ paths:
       tags:
       - Auth
   /organizations:
+    get:
+      consumes:
+      - application/json
+      description: List organizations where the user is a member
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Organization'
+            type: array
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: List organizations
+      tags:
+      - Organization
     post:
       consumes:
       - application/json
@@ -347,6 +399,213 @@ paths:
       security:
       - BearerAuth: []
       summary: Create a new organization
+      tags:
+      - Organization
+  /organizations/{org_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete an organization (Owner only)
+      parameters:
+      - description: Organization ID
+        in: path
+        name: org_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "403":
+          description: forbidden
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete organization
+      tags:
+      - Organization
+    get:
+      consumes:
+      - application/json
+      description: Get details of a specific organization
+      parameters:
+      - description: Organization ID
+        in: path
+        name: org_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Organization'
+        "404":
+          description: organization not found
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get organization details
+      tags:
+      - Organization
+    put:
+      consumes:
+      - application/json
+      description: Update details of an organization (Owner only)
+      parameters:
+      - description: Organization ID
+        in: path
+        name: org_id
+        required: true
+        type: string
+      - description: Organization Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/domain.Organization'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: invalid request body or validation errors
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "403":
+          description: forbidden
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update organization details
+      tags:
+      - Organization
+  /organizations/{org_id}/employees:
+    get:
+      consumes:
+      - application/json
+      description: Get list of employees in the organization (Owner/Manager only)
+      parameters:
+      - description: Organization ID
+        in: path
+        name: org_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.OrganizationMemberDetail'
+            type: array
+        "403":
+          description: forbidden
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get employees
+      tags:
+      - Organization
+  /organizations/{org_id}/employees/{user_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Remove an employee from the organization (Owner/Manager only)
+      parameters:
+      - description: Organization ID
+        in: path
+        name: org_id
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "403":
+          description: forbidden
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Remove employee
+      tags:
+      - Organization
+    put:
+      consumes:
+      - application/json
+      description: Update employee role or group (Owner/Manager only)
+      parameters:
+      - description: Organization ID
+        in: path
+        name: org_id
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      - description: Update Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/domain.UpdateEmployeeRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: invalid request body or validation errors
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "403":
+          description: forbidden
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update employee
       tags:
       - Organization
   /organizations/{org_id}/groups:
